<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_pantalla">

        <TextView
            android:id="@+id/tvTituloPromedio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_promedio"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margen_grande" />

        <EditText
            android:id="@+id/etNombreEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_estudiante"
            android:inputType="textPersonName"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota_1"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota_2"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota_3"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etNota4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota_4"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etNota5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nota_5"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_grande" />

        <Button
            android:id="@+id/btnCalcularPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_promedio"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/azul_principal"
            android:layout_marginBottom="@dimen/margen_grande" />

        <TextView
            android:id="@+id/tvPromedioFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promedio_final"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro"
            android:layout_marginBottom="@dimen/margen_normal" />

        <TextView
            android:id="@+id/tvEstadoEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado_estudiante"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_grande" />

        <Button
            android:id="@+id/btnVolverMenuPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_menu"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/azul_secundario" />

    </LinearLayout>

</ScrollView>
