<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_pantalla">

        <TextView
            android:id="@+id/tvTituloSalario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_salario"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/azul_oscuro"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margen_grande" />

        <EditText
            android:id="@+id/etNombreEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_empleado"
            android:inputType="textPersonName"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_normal" />

        <EditText
            android:id="@+id/etSalarioBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salario_base"
            android:inputType="numberDecimal"
            android:textColor="@color/texto_principal"
            android:layout_marginBottom="@dimen/margen_grande" />

        <Button
            android:id="@+id/btnCalcularSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_salario"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/azul_principal"
            android:layout_marginBottom="@dimen/margen_grande" />

        <TextView
            android:id="@+id/tvSalarioBruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salario_bruto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/salario_bruto_color"
            android:layout_marginBottom="@dimen/margen_normal" />

        <TextView
            android:id="@+id/tvRenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renta"
            android:textSize="18sp"
            android:textColor="@color/descuento_color"
            android:layout_marginBottom="@dimen/margen_normal" />

        <TextView
            android:id="@+id/tvAfp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afp"
            android:textSize="18sp"
            android:textColor="@color/descuento_color"
            android:layout_marginBottom="@dimen/margen_normal" />

        <TextView
            android:id="@+id/tvIsss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isss"
            android:textSize="18sp"
            android:textColor="@color/descuento_color"
            android:layout_marginBottom="@dimen/margen_normal" />

        <TextView
            android:id="@+id/tvSalarioNeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salario_neto"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/salario_neto_color"
            android:layout_marginBottom="@dimen/margen_grande" />

        <Button
            android:id="@+id/btnVolverMenuSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver_menu"
            android:textColor="@color/blanco"
            android:backgroundTint="@color/azul_secundario" />

    </LinearLayout>

</ScrollView>